--- a/src/main/resources/templates/dashboard-admin.html
+++ b/src/main/resources/templates/dashboard-admin.html
@@ -29,7 +29,7 @@
                         </svg>
                     </button>
 
-                    <img src="/path/to/profile-picture.jpg" alt="Profile Picture" class="w-10 h-10 rounded-full">
+                    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA4L2pvYjEwMzQtZWxlbWVudC0wNy00MDMucG5n.png" alt="Profile Picture" class="w-10 h-10 rounded-full">
                     <div class="text-sm">
                         <span class="font-medium">Unami Gotaya</span>
                         <p class="text-xs underline">Admin</p>
@@ -50,7 +50,7 @@
                 <button class="mt-4 px-4 py-2 bg-pink-500 hover:bg-purple-800 text-white rounded-lg">Submit</button>
             </div>
             <div>
-                <img src="/path/to/hero-image.jpg" alt="Hero Image" class="w-40 h-40 rounded-lg">
+                <img src="https://www.pngitem.com/pimgs/m/334-3342708_business-women-in-suit-png-transparent-png.png" alt="Hero Image" class="w-40 h-40 rounded-lg">
             </div>
         </div>
 
@@ -61,48 +61,50 @@
                 <a href="#" class="text-blue-600">View All</a>
             </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
-                <div th:each="interviewer : ${topInterviewers}" class="bg-white shadow-md rounded-lg p-4 text-center">
-                    <img th:src="@{${interviewer.imageUrl}}" alt="Interviewer" class="w-16 h-16 rounded-full mx-auto">
-                    <p class="mt-2 font-semibold" th:text="${interviewer.name}">Wade Warren</p>
-                    <p class="text-gray-500 text-sm" th:text="${interviewer.role}">Videographer</p>
-                    <p class="text-yellow-400 mt-1" th:text="${interviewer.rating}">4.9</p>
-                </div>
     
                 <div class="bg-white shadow-md rounded-lg p-4 text-center">
-                    <img src="/path/to/candidate.jpg" alt="Interviewer" class="w-16 h-16 rounded-full mx-auto">
+                    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA4L2pvYjEwMzQtZWxlbWVudC0wNi0zOTcucG5n.png" alt="Interviewer" class="w-16 h-16 rounded-full mx-auto">
                     <p class="mt-2 font-semibold">Juan Hamil</p>
                     <p class="text-gray-500 text-sm">Designer</p>
                     <p class="text-yellow-400 mt-1">4.8</p>
                 </div>
 
                 <div class="bg-white shadow-md rounded-lg p-4 text-center">
-                    <img src="/path/to/candidate2.jpg" alt="Interviewer 2" class="w-16 h-16 rounded-full mx-auto">
+                    <img src="https://pbs.twimg.com/media/BduTxWnIUAAKT_5.jpg" alt="Interviewer" class="w-16 h-16 rounded-full mx-auto">
+                    <p class="mt-2 font-semibold">Wade Warren</p>
+                    <p class="text-gray-500 text-sm">Videographerp>
+                    <p class="text-yellow-400 mt-1">4.9</p>
+                </div>
+
+                <div class="bg-white shadow-md rounded-lg p-4 text-center">
+                    <img src="https://media.istockphoto.com/id/1466995518/photo/business-woman-and-worker-portrait-at-office-desk-as-administration-executive-company-manager.jpg?s=612x612&w=0&k=20&c=NvKeG6Fh0_VVfH_N0Ka-5j8284XJhL2VTJfe6IwDkWQ=" alt="Interviewer 2" class="w-16 h-16 rounded-full mx-auto">
                     <p class="mt-2 font-semibold">Allison Butz</p>
                     <p class="text-gray-500 text-sm">Production Assistant</p>
                     <p class="text-yellow-400 mt-1">4.7</p>
                 </div>
 
                 <div class="bg-white shadow-md rounded-lg p-4 text-center">
-                    <img src="/path/to/candidate3.jpg" alt="Interviewer 3" class="w-16 h-16 rounded-full mx-auto">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrHo2ZyyMTK_nsBZhMGUcOoMtI1U083DKd6EUExMH_AqhC0GUACUazaLnxpgfK0ZhB8n0&usqp=CAU" alt="Interviewer 3" class="w-16 h-16 rounded-full mx-auto">
                     <p class="mt-2 font-semibold">Jeanette Jr.</p>
                     <p class="text-gray-500 text-sm">Project Manager</p>
                     <p class="text-yellow-400 mt-1">4.8</p>
 
                 </div><div class="bg-white shadow-md rounded-lg p-4 text-center">
-                    <img src="/path/to/candidate4.jpg" alt="Interviewer 2" class="w-16 h-16 rounded-full mx-auto">
+                    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA4L2pvYjEwMzQtZWxlbWVudC0wNS0zODUucG5n.png" alt="Interviewer 2" class="w-16 h-16 rounded-full mx-auto">
                     <p class="mt-2 font-semibold">Raman Lowe</p>
                     <p class="text-gray-500 text-sm">Camera Operator</p>
                     <p class="text-yellow-400 mt-1">4.7</p>
                 </div>
 
                 <div class="bg-white shadow-md rounded-lg p-4 text-center">
-                    <img src="/path/to/cadidate5.jpg" alt="Interviewer 3" class="w-16 h-16 rounded-full mx-auto">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpRfpo86SB6nHTlhI0FZFHPbdDb-y_QKJuvx6ugVdIEn1chvgrONhKsaG_spVs9sxjv84&usqp=CAU" alt="Interviewer 3" class="w-16 h-16 rounded-full mx-auto">
                     <p class="mt-2 font-semibold">John Smith</p>
                     <p class="text-gray-500 text-sm">Project Manager</p>
                     <p class="text-yellow-400 mt-1">4.8</p>
                 </div>
             </div>
         </section>
+
             <!-- Interview Section -->
             <section>
                         <!-- Container for the content -->
@@ -115,7 +117,7 @@
                     <!-- Description Text -->
                     <p class="text-gray-600">You can manage candidates' interview session here.</p>
                     <!-- Image Section -->
-                    <img src="/path/to/your/image.jpg" alt="Interview Session" class="w-full mt-4" style="height: 250px; object-fit: cover;">
+                    <img src="https://interviewbaba.com/wp-content/uploads/2024/01/strategic-grant-planning-session.png" alt="Interview Session" class="w-full mt-4" style="height: 250px; object-fit: cover;">
                     <!-- Button Section -->
                     <div class="text-center mt-4">
                         <button class="bg-pink-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
@@ -124,6 +126,29 @@
                     </div>
                 </div>
             </section>
+
+        <!-- manage activities -->
+        <section>
+                    <!-- Container for the content -->
+            <div class="bg-white p-4 rounded-lg shadow-lg ">
+                <!-- Header Section -->
+                <div class="flex justify-between items-center mb-4">
+                    <h3 class="text-2xl font-bold text-gray-800">Manage activities</h3>
+                    <a href="#" class="text-blue-600">View All</a>
+                </div>
+                <!-- Description Text -->
+                <p class="text-gray-600">You can manage manage activities here.</p>
+                <!-- Image Section -->
+                <img src="https://resources.workable.com/wp-content/uploads/2016/09/accounting-manager-interview-questions.jpg" alt="Manage activities" class="w-full mt-4" style="height: 250px; object-fit: cover;">
+                <!-- Button Section -->
+                <div class="text-center mt-4">
+                    <button class="bg-pink-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
+                        Manage activities
+                    </button>
+                </div>
+            </div>
+        </section>
+
 
         <!-- Enrolled Courses Section -->
         <section>
@@ -150,7 +175,7 @@
              <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0">
                     <!-- Placeholder for image -->
-                    <img src="https://via.placeholder.com/100x100" alt="Placeholder" class="w-24 h-24 rounded-full">
+                    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA4L2pvYjEwMzktZWxlbWVudC0yMC0zOTMucG5n.png" alt="Placeholder" class="w-24 h-24 rounded-full">
                 </div>
                 <div class="flex-grow p-6 rounded-xl bg-gradient-to-br from-pink-500 to-pink-300 border-2 border-pink-600 shadow-xl">
                     <h2 class="text-xl font-semibold text-white">Graphic Designer</h2>
@@ -165,7 +190,7 @@
             <!-- Copy below for additional cards as needed -->
             <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0">
-                    <img src="https://via.placeholder.com/100x100" alt="Placeholder" class="w-24 h-24 rounded-full">
+                    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA4L2pvYjEwMzktZWxlbWVudC0yNS0zOTMucG5n.png" alt="Placeholder" class="w-24 h-24 rounded-full">
                 </div>
                 <div class="flex-grow p-6 rounded-xl bg-gradient-to-br from-pink-500 to-pink-300 border-2 border-pink-600 shadow-xl">
                     <h2 class="text-xl font-semibold text-white">Production Assistant</h2>
@@ -178,7 +203,7 @@
     
             <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0">
-                    <img src="https://via.placeholder.com/100x100" alt="Placeholder" class="w-24 h-24 rounded-full">
+                    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTAxLzI3OS1wYWkxNTc5LW5hbS1qb2IxNTI5LnBuZw.png" alt="Placeholder" class="w-24 h-24 rounded-full">
                 </div>
                 <div class="flex-grow p-6 rounded-xl bg-gradient-to-br from-pink-500 to-pink-300 border-2 border-pink-600 shadow-xl">
                     <h2 class="text-xl font-semibold text-white">Camera Operator</h2>
@@ -191,7 +216,7 @@
 
             <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0">
-                    <img src="https://via.placeholder.com/100x100" alt="Placeholder" class="w-24 h-24 rounded-full">
+                    <img src="https://toppng.com/uploads/preview/matthew-headshot-round-2-gentlema-115637306339dtbi0wcgv.png" alt="Placeholder" class="w-24 h-24 rounded-full">
                 </div>
                 <div class="flex-grow p-6 rounded-xl bg-gradient-to-br from-pink-500 to-pink-300 border-2 border-pink-600 shadow-xl">
                     <h2 class="text-xl font-semibold text-white">Social Media Manager</h2>
@@ -204,21 +229,35 @@
         </div>
     </section>
 
+         
     <!-- Submit Resource request application Section -->
-    <section>
-        <div th:each="notice : ${notices}" class="bg-white p-4 shadow-lg rounded-lg">
-            <h2 class="text-lg text-gray-800 font-bold mb-4">Submit Resource request application </h2>
-            <p class="text-gray-600 mb-6">You can submit the resource request application here.</p>
-            <!-- Image Section -->
-            <img src="/path/to/your/image.jpg" alt="Interview Session" class="w-full mt-4" style="height: 250px; object-fit: cover;">
-            <!-- Button Section -->
-            <div class="text-center mt-4">
-                <button class="bg-pink-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
-                    Submit here
-                </button>
-            </div>
+         <section>
+            <!-- Container for the content -->
+    <div class="bg-white p-4 rounded-lg shadow-lg ">
+        <!-- Header Section -->
+        <div class="flex justify-between items-center mb-4">
+            <h3 class="text-2xl font-bold text-gray-800">Submit Resource request application </h3>
+            <a href="#" class="text-blue-600">View All</a>
         </div>
-    </section>
+        <!-- Description Text -->
+        <p class="text-gray-600">You can submit the resource request application here.</p>
+        <!-- Image Section -->
+        <img src="https://www.miles.ca/wp-content/uploads/2018/04/Fotolia_164972019_M-1280x853.jpg" alt="Manage activities" class="w-full mt-4" style="height: 250px; object-fit: cover;">
+        <!-- Button Section -->
+        <div class="text-center mt-4">
+            <button class="bg-pink-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
+                Submit here
+            </button>
+        </div>
+
+        <!-- Update Button
+  <div class="flex justify-end mt-4">
+    <a href="/talent-form" class="px-4 py-2 bg-blue-600 text-white font-semibold rounded hover:bg-blue-700">Update</a>
+  </div>
+</div> -->
+
+    </div>
+</section> 
 
 <!-- Daily Notice Section -->
 <section>
@@ -238,8 +277,6 @@
         </div>
     </div>
 </section>
-
-
     </div>
 </body>
 </html>
